--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
     margin: 150px auto 0;
     padding: 250px 70px 50px;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+    transition: 0.5s;
+}
+
+#card:hover{
+    transform: scale(1.2);
 }
 
 #content {
