--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
     padding: 0;
     font-family: 微軟正黑體;
 }
-
+body{
+    background-color: rgb(63, 59, 59);
+}
 #card {
     background-image: url(https://images.unsplash.com/photo-1567579518027-7a113279f8ce?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1489&q=80);
     /* bgs */
@@ -25,6 +27,7 @@
     background-color: rgba(0, 0, 0, 0.5);
     color: gold;
     padding: 30px 20px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
 }
 
 h1 {
@@ -48,6 +51,6 @@ footer {
     font-size: 100px;
     letter-spacing: 150px;
     padding-left: 150px;
-    color: rgba(0, 0, 0, 0.05);
+    color: gold;
     margin-top: 50px;
 }
